# timer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: timer-config.cmake.in
include/: timer.h
include/timer/: CMakeLists.txt  common.t.h  countdown.h  countdown.t.cpp  countup.h  countup.t.cpp
